--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,22 @@
 
     <groupId>net.ggtools.maven</groupId>
     <artifactId>regex-copy-maven-plugin</artifactId>
-    <version>0.2-SNAPSHOT</version>
+    <version>0.3.0-SNAPSHOT</version>
 
     <packaging>maven-plugin</packaging>
 
     <name>regex-copy-plugin Maven Mojo</name>
     <description>A resource copy plugin on steroids using regex to match and rename resources.</description>
-    <url>https://github.com/ggtools/regex-copy-plugin</url>
+    <url>https://github.com/bitsandbytes/regex-copy-plugin</url>
 
     <properties>
-        <maven.version>3.3.3</maven.version>
+        <maven.version>3.6.0</maven.version>
+        <junit.version>4.13-beta-1</junit.version>
+        <assertj-core.version>3.11.1</assertj-core.version>
+        <spock-core.version>1.1-groovy-2.4-rc-2</spock-core.version>
+        <groovy-all.version>2.5.0-beta-2</groovy-all.version>
+        <maven-plugin-testing-harness.version>3.3.0</maven-plugin-testing-harness.version>
+        <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -37,12 +43,17 @@
             <name>Christophe Labouisse</name>
             <email>christophe@labouisse.org</email>
         </developer>
+        <developer>
+            <id>bitsandbytes</id>
+            <name>Timothy McKernan</name>
+            <email>timbitsandbytes@gmail.com</email>
+        </developer>
     </developers>
 
     <scm>
-        <connection>scm:git:git@github.com:ggtools/regex-copy-plugin.git</connection>
-        <developerConnection>scm:git:git@github.com:ggtools/regex-copy-plugin.git</developerConnection>
-        <url>https://github.com/ggtools/regex-copy-plugin</url>
+        <connection>scm:git:git@github.com:bitsandbytes/regex-copy-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:bitsandbytes/regex-copy-plugin.git</developerConnection>
+        <url>https://github.com/bitsandbytes/regex-copy-plugin</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -51,48 +62,48 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
-            <version>3.3.3</version>
+            <version>${maven.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
-            <version>3.4</version>
+            <version>${maven.version}</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>1.7.0</version>
+            <version>${assertj-core.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
-            <version>1.0-groovy-2.4</version>
+            <version>${spock-core.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.1</version>
+            <version>${groovy-all.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.maven.plugin-testing</groupId>
             <artifactId>maven-plugin-testing-harness</artifactId>
-            <version>3.3.0</version>
+            <version>${maven-plugin-testing-harness.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -116,7 +127,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.3</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
                     <source>1.7</source>
                     <target>1.7</target>
@@ -126,12 +137,12 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.4</version>
+                <version>1.6.2</version>
                 <executions>
                     <execution>
                         <goals>
                             <goal>compile</goal>
-                            <goal>testCompile</goal>
+                            <goal>compileTests</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -140,7 +151,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.4</version>
+                <version>${maven.version}</version>
                 <executions>
                     <execution>
                         <id>default-descriptor</id>
@@ -158,7 +169,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <version>1.9</version>
+                <version>1.17</version>
                 <executions>
                     <execution>
                         <id>check-java-api-signature</id>
@@ -179,7 +190,7 @@
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm-all</artifactId>
-                        <version>5.0.2</version>
+                        <version>5.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -187,7 +198,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.0.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -201,7 +212,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>2.5.3</version>
             </plugin>
         </plugins>
     </build>
