--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,21 @@
     <url>https://github.com/bitsandbytes/regex-copy-plugin</url>
 
     <properties>
-        <maven.version>3.6.0</maven.version>
-        <junit.version>4.13-beta-1</junit.version>
+        <animal-sniffer-maven-plugin.version>1.17</animal-sniffer-maven-plugin.version>
+        <asm-all.version>5.2</asm-all.version>
         <assertj-core.version>3.11.1</assertj-core.version>
-        <spock-core.version>1.1-groovy-2.4-rc-2</spock-core.version>
+        <gmavenplus-plugin.version>1.6.2</gmavenplus-plugin.version>
         <groovy-all.version>2.5.0-beta-2</groovy-all.version>
-        <maven-plugin-testing-harness.version>3.3.0</maven-plugin-testing-harness.version>
+        <java17.version>1.0</java17.version>
+        <junit.version>4.13-beta-1</junit.version>
+        <logback-classic.version>1.3.0-alpha4</logback-classic.version>
+        <maven.version>3.6.0</maven.version>
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
+        <maven-plugin-testing-harness.version>3.3.0</maven-plugin-testing-harness.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
+        <spock-core.version>1.1-groovy-2.4-rc-2</spock-core.version>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -63,6 +71,12 @@
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-plugin-api</artifactId>
             <version>${maven.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback-classic.version}</version>
         </dependency>
 
         <dependency>
@@ -137,7 +151,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.6.2</version>
+                <version>${gmavenplus-plugin.version}</version>
                 <executions>
                     <execution>
                         <goals>
@@ -169,7 +183,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>animal-sniffer-maven-plugin</artifactId>
-                <version>1.17</version>
+                <version>${animal-sniffer-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>check-java-api-signature</id>
@@ -181,7 +195,7 @@
                             <signature>
                                 <groupId>org.codehaus.mojo.signature</groupId>
                                 <artifactId>java17</artifactId>
-                                <version>1.0</version>
+                                <version>${java17.version}</version>
                             </signature>
                         </configuration>
                     </execution>
@@ -190,7 +204,7 @@
                     <dependency>
                         <groupId>org.ow2.asm</groupId>
                         <artifactId>asm-all</artifactId>
-                        <version>5.2</version>
+                        <version>${asm-all.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -198,7 +212,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>${maven-source-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -212,7 +226,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.5.3</version>
+                <version>${maven-release-plugin.version}</version>
             </plugin>
         </plugins>
     </build>
